--- a/lowerthird.html
+++ b/lowerthird.html
@@ -1,70 +1,3 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-</head>
-
-<body style="margin:0;background:transparent;font-family:'Montserrat', Arial, sans-serif;">
-
-<div style="
-position:absolute;
-bottom:60px;
-left:40px;
-width:760px;
-height:120px;
-background:rgba(48,48,48,0.9);
-color:white;
-border-radius:0 0 40px 0;
-padding:16px 140px 16px 28px;
-box-shadow:0 6px 16px rgba(0,0,0,0.7);
-display:flex;
-overflow:visible;
-">
-
-  <!-- Green Accent Bar -->
-  <div style="
-    width:14px;
-    background:#00AF50;
-    margin-right:18px;
-  "></div>
-
-  <!-- Text Content -->
-  <div style="flex:1;">
-    <div id="l1" style="font-size:34px;font-weight:700;"></div>
-
-    <!-- Row 2 split into 4 columns -->
-    <div style="
-      display:flex;
-      align-items:center;
-      gap:10px;
-      font-size:26px;
-      margin-top:2px;
-    ">
-      <span style="opacity:0.7;font-weight:600;">Dr:</span>
-      <span id="driver"></span>
-
-      <span style="opacity:0.7;font-weight:600;margin-left:16px;">Tr:</span>
-      <span id="trainer"></span>
-    </div>
-
-    <div id="l3" style="font-size:22px;margin-top:6px;opacity:0.85;"></div>
-  </div>
-
-  <!-- Driver Photo (Higher Position) -->
-  <img id="photo" src="photos/default.png" style="
-    position:absolute;
-    right:20px;
-    top:-110px;
-    height:250px;
-    width:190px;
-    object-fit:cover;
-    border-radius:40px 0 0 40px;
-    filter: drop-shadow(0 14px 30px rgba(0,0,0,0.7));
-  ">
-
-</div>
-
 <script>
 const SHEET_ID = "1O74vkMwUFDURoplB0S6xnwmTnD1T7kXTy7FuExzaK3c";
 const TAB = "lowerthird";
@@ -73,10 +6,7 @@ function load(){
   fetch(`https://opensheet.elk.sh/${SHEET_ID}/${TAB}`)
     .then(r => r.json())
     .then(d => {
-
-      // Guard: if API returns an error object
       if(!Array.isArray(d) || !d.length) return;
-
       const row = d[0];
 
       const l1 = document.getElementById("l1");
@@ -97,20 +27,9 @@ function load(){
             : "photos/default.png";
       }
     })
-    .catch(err => console.error("Lowerthird fetch error:", err));
+    .catch(err => console.error("Lowerthird error:", err));
 }
 
 load();
 setInterval(load, 1000);
 </script>
-
-
-
-
-</body>
-</html>
-
-
-
-
-
